[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "runconftools"
description = "A package which interfaces with the operation repositories that store the configurations used at EHN1"
version = "1.1.3"
readme = "docs/README.md"
urls = { Homepage = "https://github.com/DUNE-DAQ/runconftools" }
requires-python = ">=3.6"
dependencies = [
	     "click",
	     "click-shell",
	     "GitPython",
	     "rich",
	     "sh",
	     ]

[project.optional-dependencies]
develop = [
    "ipdb",
    "ipython",
    "ruff",
    "pre-commit",
    "pytest",
]

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools]
include-package-data = true

[project.scripts]
cpm-setup = "runconftools.apps.__cpm_setup__:main"
cpm-update = "runconftools.apps.__cpm_update__:main"
cpm-purge = "runconftools.apps.__cpm_purge__:main"
