[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "runconftools"
description = "A package which interfaces with the operation repositories that store the configurations used at EHN1"
version = "1.2.1"
readme = "docs/README.md"
urls = { Homepage = "https://github.com/DUNE-DAQ/runconftools" }
requires-python = ">=3.6"
dependencies = [
	     "click",
	     "click-shell",
	     "GitPython",
	     "rich",
	     "sh",
	     ]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]
develop = [
    "ipdb",
    "ipython",
    "ruff",
    "pre-commit",
    "pytest",
]

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]

[project.scripts]
cpm-setup = "runconftools.apps.__cpm_setup__:main"
cpm-update = "runconftools.apps.__cpm_update__:main"
cpm-purge = "runconftools.apps.__cpm_purge__:main"

[tool.pytest.ini_options]
addopts = "-v --tb=short --cov=runconftools --cov=src/runconftools tests/"  # omitted --cov-report=html to avoid suppressing table to stdout

[tool.coverage.run]
source = ["runconftools"]
omit = ["tests/*", "scripts/*"]

# * See https://docs.astral.sh/ruff/rules/ for details on Ruff's linting options
[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # check for errors using PyFlakes
    "I",    # best practices for import calls
    "UP",   # suggestions for code modernization
    "RUF",  # built-in Ruff warnings
    "R",    # refactoring suggestions
]
ignore = [
    "E501", # Don't enforce line lengths within a linting context
]
