[metadata]
name = config-management
version = attr: config-management.__version__
url = https://gitlab.cern.ch/dune-daq/online/config-management.git 
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
package_dir = =src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cpm-setup = config-management.apps.__cpm_setup__.py:cli
    cpm-update = config-management.apps.__cpm_update__.py:cli
