[metadata]
name = config_management
version = attr: config_management.__version__
url = https://gitlab.cern.ch/dune-daq/online/config-management.git 
long_description = file: docs/README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cpm-setup = config_management.apps.__cpm_setup__:main
    cpm-update = config_management.apps.__cpm_update__:main
    cpm-purge = config_management.apps.__cpm_purge__:main